--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
             "database/factories"
         ],
         "psr-4": {
-            "App\\": "app/"
+            "sisconta\\": "app/"
         }
     },
     "autoload-dev": {
